<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
	tools:context="${relativePackage}.${activityClass}"  >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/about"
			android:contentDescription="@string/about_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/smallbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallbutton_layout_marginRight"
            android:layout_marginBottom="@dimen/smallbutton_layout_marginBottom"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/info"
            android:text="@string/about"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/www"
			android:contentDescription="@string/www_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/smallbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallbutton_layout_marginRight"
            android:layout_marginBottom="@dimen/smallbutton_layout_marginBottom"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/antenna_xl"
            android:text="@string/www"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/help"
			android:contentDescription="@string/help_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/smallbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallbutton_layout_marginRight"
            android:layout_marginBottom="@dimen/smallbutton_layout_marginBottom"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/question_mark_2_xl"
            android:text="@string/help"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/provide_feedback"
			android:contentDescription="@string/provide_feedback_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/smallbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallbutton_adusted_layout_marginRight"
            android:layout_marginBottom="@dimen/smallbutton_layout_marginBottom"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/feedback"
            android:text="@string/provide_feedback"
            style="?android:attr/borderlessButtonStyle" />    
    </LinearLayout>

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/welcome" />

    <ImageView
        android:id="@+id/HomepageImageView"
		android:contentDescription="@string/homepage_image_view"
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/srija_chattapadyay2"
		android:layout_marginBottom="@dimen/imageview_layout_marginBottom" 
		android:adjustViewBounds="true"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/text_tothe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to_the" />
    
    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/featured_gardens"
			android:contentDescription="@string/featured_gardens_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/largebutton_layout_marginEnd"
            android:layout_marginRight="@dimen/largebutton_layout_marginRight"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/featuredgarden"
            android:text="@string/featured_gardens"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/visitor_information"
			android:contentDescription="@string/visitor_information_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/largebutton_layout_marginEnd"
            android:layout_marginRight="@dimen/largebutton_layout_marginRight"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/information"
            android:text="@string/visitor_information"
            style="?android:attr/borderlessButtonStyle" />    
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/arboretum_events"
			android:contentDescription="@string/arboretum_events_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/largebutton_layout_marginEnd"
            android:layout_marginRight="@dimen/largebutton_layout_marginRight"
            android:layout_marginTop="@dimen/largebutton_layout_marginTop"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/calendar"
            android:text="@string/arboretum_events" 
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/park_history"
			android:contentDescription="@string/park_history_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/largebutton_layout_marginEnd"
            android:layout_marginRight="@dimen/largebutton_layout_marginRight"
            android:layout_marginTop="@dimen/largebutton_layout_marginTop"
            android:background="@drawable/button_background"
            android:drawableTop="@drawable/yellowpinecone"
            android:text="@string/park_history"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/trails"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smallbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallbutton_layout_marginRight"
            android:layout_marginTop="@dimen/smallbutton_layout_marginTop"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/trails_button"
            android:drawableTop="@drawable/trails"
            android:text="@string/trails" />

        <Button
            android:id="@+id/plant_lookup"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smallbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallbutton_layout_marginRight"
            android:layout_marginTop="@dimen/smallbutton_layout_marginTop"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/plant_lookup_button"
            android:drawableTop="@drawable/plantlookup"
            android:text="@string/plant_lookup" />

        <Button
            android:id="@+id/map"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smallbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallbutton_layout_marginRight"
            android:layout_marginTop="@dimen/smallbutton_layout_marginTop"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/map_button"
            android:drawableTop="@drawable/greenmap"
            android:text="@string/map" />

        <Button
            android:id="@+id/bookmarks"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smallbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallbutton_adusted_layout_marginRight"
            android:layout_marginTop="@dimen/smallbutton_layout_marginTop"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:contentDescription="@string/bookmarks_button"
            android:drawableTop="@drawable/greenbookmarks"
            android:text="@string/bookmarks" />
    </LinearLayout>

</LinearLayout>