<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout  
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"   >      
	    <ImageView
	        android:id="@+id/HomepageImageView"
			android:contentDescription="@string/homepage_image_view"
			android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:src="@drawable/acer_palmatum_jeter"
			android:layout_marginBottom="@dimen/imageview_layout_marginBottom" 
			android:scaleType="fitXY"
			android:adjustViewBounds="true"
	        android:layout_weight="1" />
	</LinearLayout>
    
    <Button
        android:id="@+id/featured_gardens"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/minWidth"
        android:minHeight="@dimen/minHeight"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout1"
        android:layout_marginRight="@dimen/buttonSideMargins"
        android:layout_marginLeft="@dimen/buttonSideMargins"
        android:layout_marginBottom="@dimen/buttonTopBottomMargins"
        android:background="@drawable/button_background"
        android:contentDescription="@string/featured_gardens_button"
        android:drawableTop="@drawable/featuredgarden"
        android:text="@string/featured_gardens" />

    <Button
        android:id="@+id/visitor_information"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/minWidth"
        android:minHeight="@dimen/minHeight"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/featured_gardens"
        android:layout_marginRight="@dimen/buttonSideMargins"
        android:layout_marginLeft="@dimen/buttonSideMargins"
        android:layout_marginBottom="@dimen/buttonTopBottomMargins"
        android:background="@drawable/button_background"
        android:contentDescription="@string/visitor_information_button"
        android:drawableTop="@drawable/information"
        android:text="@string/visitor_information" />

    <Button
        android:id="@+id/park_history"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/minWidth"
        android:minHeight="@dimen/minHeight"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/featured_gardens"
        android:layout_marginRight="@dimen/buttonSideMargins"
        android:layout_marginLeft="@dimen/buttonSideMargins"
        android:layout_marginBottom="@dimen/buttonTopBottomMargins"
        android:background="@drawable/button_background"
        android:contentDescription="@string/park_history_button"
        android:drawableTop="@drawable/yellowpinecone"
        android:text="@string/park_history" />

    <Button
        android:id="@+id/arboretum_events"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/minWidth"
        android:minHeight="@dimen/minHeight"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/park_history"
        android:layout_marginRight="@dimen/buttonSideMargins"
        android:layout_marginLeft="@dimen/buttonSideMargins"
        android:layout_marginBottom="@dimen/buttonTopBottomMargins"
        android:background="@drawable/button_background"
        android:contentDescription="@string/arboretum_events_button"
        android:drawableTop="@drawable/calendar"
        android:text="@string/arboretum_events" />
        
        <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/trails"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smallrectbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallrectbutton_adusted_layout_marginRight"
            android:layout_marginTop="@dimen/smallrectbutton_layout_marginTop"
            android:background="@drawable/button_background_rect"
            android:layout_weight="1"
            android:contentDescription="@string/trails_button"
            android:drawableTop="@drawable/trails"
            android:text="@string/trails" />

        <Button
            android:id="@+id/plant_lookup"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smallrectbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallrectbutton_adusted_layout_marginRight"
            android:layout_marginTop="@dimen/smallrectbutton_layout_marginTop"
            android:background="@drawable/button_background_rect"
            android:layout_weight="1"
            android:contentDescription="@string/plant_lookup_button"
            android:drawableTop="@drawable/plantlookup"
            android:text="@string/plant_lookup" />

        <Button
            android:id="@+id/map"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smallrectbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallrectbutton_adusted_layout_marginRight"
            android:layout_marginTop="@dimen/smallrectbutton_layout_marginTop"
            android:background="@drawable/button_background_rect"
            android:layout_weight="1"
            android:contentDescription="@string/map_button"
            android:drawableTop="@drawable/greenmap"
            android:text="@string/map" />

        <Button
            android:id="@+id/bookmarks"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smallrectbutton_layout_marginEnd"
            android:layout_marginRight="@dimen/smallrectbutton_adusted_layout_marginRight"
            android:layout_marginTop="@dimen/smallrectbutton_layout_marginTop"
            android:background="@drawable/button_background_rect"
            android:layout_weight="1"
            android:contentDescription="@string/bookmarks_button"
            android:drawableTop="@drawable/greenbookmarks"
            android:text="@string/bookmarks" />   
    </LinearLayout>
</RelativeLayout>